add announcement bar

--- a/_locales/en/messages.json
+++ b/_locales/en/messages.json
@@ -7,6 +7,10 @@
         "message": "Take back the controls on YouTube Shorts with playback, volume, progress bar and more!",
         "description": "Description of the extension"
     },
+    "announcement": {
+        "message": "Help us translate BYS!",
+        "description": "Announcement which will update from time to time"
+    },
 
     "website": {
         "message": "Website"
