add localization for hideshorts

--- a/_locales/en/messages.json
+++ b/_locales/en/messages.json
@@ -129,6 +129,9 @@
     "automaticallyOpenCommentsTitle": {
         "message": "Open comments on new shorts automatically"
     },
+    "hideShortsOverlayTitle": {
+        "message": "Hide the the overlay on shorts (title, channel, etc)"
+    },
     
 
     "toggleFeatures": {
