remove beta keyword

--- a/_locales/he/messages.json
+++ b/_locales/he/messages.json
@@ -1,6 +1,6 @@
 {
 	"extName": {
-		"message": "Better YouTube Shorts (Beta)",
+		"message": "Better YouTube Shorts",
 		"description": "Name of the extension"
 	},
 	"extDescription": {
