--- a/_locales/en/messages.json
+++ b/_locales/en/messages.json
@@ -130,7 +130,7 @@
         "message": "Open comments on new shorts automatically"
     },
     "hideShortsOverlayTitle": {
-        "message": "Hide the the overlay on shorts (title, channel, etc)"
+        "message": "Hide the overlay on shorts (title, channel, etc)"
     },
     
 
