Portuguese translation update
- Translate new messages
- Add store description

--- a/_locales/pt/messages.json
+++ b/_locales/pt/messages.json
@@ -129,6 +129,9 @@
     "automaticallyOpenCommentsTitle": {
         "message": "Abra comentários automaticamente"
     },
+    "hideShortsOverlayTitle": {
+        "message": "Ocultar sobreposição nos Shorts (título, canal, etc)"
+    },
     
 
     "toggleFeatures": {
