--- a/_locales/ja/messages.json
+++ b/_locales/ja/messages.json
@@ -7,6 +7,10 @@
         "message": "再生、音量、シークバーなど、YouTube Shortsのコントロールを取り戻しましょう！",
         "description": "Description of the extension"
     },
+"announcement": {
+        "message": "拡張機能の翻訳にご協力ください!",
+        "description": "Announcement which will update from time to time"
+    },
 
     "website": {
         "message": "GitHub🔗"
@@ -125,7 +129,10 @@
     "automaticallyOpenCommentsTitle": {
         "message": "自動的にコメントを開く"
     },
-    
+        "hideShortsOverlayTitle": {
+        "message": "タイトルやチャンネルなどの詳細を隠す"
+    },
+
 
     "toggleFeatures": {
         "message": "機能"
