Allow toggling of the view counter and upload date

--- a/_locales/he/messages.json
+++ b/_locales/he/messages.json
@@ -151,6 +151,12 @@
 	"volumeSlider": {
 		"message": "מחוון עוצמת שמע"
 	},
+	"viewCounter": {
+        "message": "מונה צפייה"
+    },
+    "uploadDate": {
+        "message": "תאריך העלאה"
+    },
 	"enable": {
 		"message": "הפעל $1"
 	}
