--- a/_locales/it/messages.json
+++ b/_locales/it/messages.json
@@ -145,6 +145,12 @@
     "volumeSlider": {
         "message": "Volume"
     },
+    "viewCounter": {
+        "message": "Visualizza contatore"
+    },
+    "uploadDate": {
+        "message": "Data di caricamento"
+    },
     "enable": {
         "message": "Abilita $1"
     },
