--- a/_locales/pt/messages.json
+++ b/_locales/pt/messages.json
@@ -161,6 +161,12 @@
     "volumeSlider": {
         "message": "Barra de Volume"
     },
+    "viewCounter": {
+        "message": "Ver contador"
+    },
+    "uploadDate": {
+        "message": "Data de upload"
+    },
     "enable": {
         "message": "Habilitar $1"
     }
