--- a/_locales/en/messages.json
+++ b/_locales/en/messages.json
@@ -161,6 +161,12 @@
     "volumeSlider": {
         "message": "Volume Slider"
     },
+    "viewCounter": {
+        "message": "View Counter"
+    },
+    "uploadDate": {
+        "message": "Upload Date"
+    },
     "enable": {
         "message": "Enable $1"
     }
