--- a/_locales/fr/messages.json
+++ b/_locales/fr/messages.json
@@ -152,6 +152,12 @@
     "volumeSlider": {
         "message": "Curseur de volume"
     },
+    "viewCounter": {
+        "message": "Afficher le compteur"
+    },
+    "uploadDate": {
+        "message": "Date de dépôt"
+    },
     "enable": {
         "message": "Activer $1"
     }
