--- a/_locales/tr/messages.json
+++ b/_locales/tr/messages.json
@@ -145,6 +145,12 @@
     "volumeSlider": {
         "message": "Ses Düzey Ayarı"
     },
+    "viewCounter": {
+        "message": "Sayacı Görüntüle"
+    },
+    "uploadDate": {
+        "message": "Yükleme tarihi"
+    },
     "enable": {
         "message": "$1'i Aktif Et"
     },
