add full screen toggle functionality

--- a/_locales/en/messages.json
+++ b/_locales/en/messages.json
@@ -92,6 +92,9 @@
   "toggleMute": {
     "message": "Toggle Mute"
   },
+  "toggleFullScreen": {
+    "message": "Toggle Full Screen"
+  },
   "nextFrame": {
     "message": "Next Frame"
   },
