--- a/_locales/en/messages.json
+++ b/_locales/en/messages.json
@@ -137,7 +137,7 @@
     "message": "Show volume slider horizontally instead of vertically"
   },
   "defaultPlaybackRate": {
-    "message": "Change the default playback rate when you first open the shorts page"
+    "message": "Default playback rate"
   },
   "toggleFeatures": {
     "message": "Toggle Features"
