add extra options to disable double click fullscreen

--- a/_locales/en/messages.json
+++ b/_locales/en/messages.json
@@ -171,5 +171,8 @@
   },
   "enable": {
     "message": "Enable $1"
+  },
+  "fullScreenDoubleClick": {
+    "message": "Double click to toggle full screen"
   }
 }
