fix selector for upload date and add back shorts' view
closes #173

--- a/_locales/en/messages.json
+++ b/_locales/en/messages.json
@@ -166,6 +166,9 @@
   "volumeSlider": {
     "message": "Volume Slider"
   },
+  "viewCounter": {
+    "message": "View Counter"
+  },
   "uploadDate": {
     "message": "Upload Date"
   },
